hdf5-derive/tests/compile-fail/unit-struct.stderr
error: cannot derive `H5Type` for unit structs
 --> $DIR/unit-struct.rs:7:8
  |
7 | struct Foo;
  |        ^^^
